--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 </div>
 
 
-<img src="img/tortellini-3137649_1920.jpg" alt="imagen de pastas" class="imgC"/>
+<img src="tortellini-3137649_1920.jpg" alt="imagen de pastas" class="imgC"/>
 
 <div class="call"><a href="#!">RESERVAR</a></div>
 
