--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 <div id="content">
 
-<img src="img/images.png" alt="Logo de la marca" class="left"/>
+<img src="images.png" alt="Logo de la marca" class="left"/>
 
 <div class="etiqueta">
 	<span class="promo">2x1</span>
