--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
 
 	<p class="terminos">2X1: ABONANDO LA DE MAYOR PRECIO LA SEGUNDA ES SIN CARGO, DESPU&Eacute;S DE LAS 19:00HS &#150; PROMOCI&Oacute;N NO ACUMULABLES CON OTRAS PROMOCIONES &#150; NO INCLUYE CUBIERTOS, PRECIO DEL CUBIERTO &#036;40 &#040;&#036;60 EN ALICIA M. DE JUSTO 102 Y &#036;31 EN AV. RAFAEL NU&Ntilde;EZ 4005&#041; &#150; V&Aacute;LIDO DESDE 01&#047;07&#047;2018 HASTA 01&#047;09&#047;2018</p>
 
-	<div><img src="img/instagram.png" alt="Logo de Instagram" class="redes"/><span>il&#095;gatto&#095;trattorias</span></div>
-	<div><img src="img/facebook.png" alt="Logo de Facebook" class="redes"/><span>ilgattotratorias</span></div>
-	<div><img src="img/internet.png" alt="Logo de Twitter" class="redes"/><span>www.ilgatto.com.ar</span></div>
+	<div><img src="instagram.png" alt="Logo de Instagram" class="redes"/><span>il&#095;gatto&#095;trattorias</span></div>
+	<div><img src="facebook.png" alt="Logo de Facebook" class="redes"/><span>ilgattotratorias</span></div>
+	<div><img src="internet.png" alt="Logo de Twitter" class="redes"/><span>www.ilgatto.com.ar</span></div>
 
 </div>
 
