--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <link href="https://fonts.googleapis.com/css?family=Merriweather:300" rel="stylesheet"/>
 <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet"/>
-<link rel="stylesheet" href="css/ini.css" type="text/css" media="screen"/>
+<link rel="stylesheet" href="ini.css" type="text/css" media="screen"/>
 
 
 <script type="text/javascript" src="#"></script>
