--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 <meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:site" content="@NelsyGam"/>
 <meta name="twitter:creator" content="@NelsyGam"/>
-<meta name="twitter:url" content="http://upfmbwxg.lucusvirtual.es/"/>
+<meta name="twitter:url" content=""/>
 <meta name="twitter:title" content="DEMO: Maquetado para Email-Marketing"/>
-<meta name="twitter:image" content="http://upfmbwxg.lucusvirtual.es/img/tortellini-3137649_1920.jpg"/>
+<meta name="twitter:image" content=""/>
 <meta name="twitter:description" content="Promociones a través de Email Marketing"/>
 
 
