--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
 <img src="tortellini-3137649_1920.jpg" alt="imagen de pastas" class="imgC"/>
 
-<div class="call"><a href="#!">RESERVAR</a></div>
+<div class="call"><a href="../html/formulario.html">RESERVAR</a></div>
 
 <div class="footer">
 
