--- a/html/formulario.html
+++ b/html/formulario.html
@@ -32,7 +32,7 @@
 
 <div id="contenedorDatos">
 	
-	<p class="titulo">Usted esta por solicitar una<br>RESERVA<br>con los siguientes Datos:</p>
+	<p class="titulo">Usted esta por solicitar una RESERVA con los siguientes Datos:</p>
 
 </div>
 <div id="impresionDatos"><p>hola esto es iuna prubas para ver como se de fine el paddind dentro del contenedor de datos</p></div>
@@ -46,7 +46,7 @@
 
 			<fieldset>
 
-				<legend>Para realizar una RESERVA, complete el siguiente Formulario.</legend><br/>
+				<legend>Para realizar una<br>RESERVA<br> complete el siguiente Formulario.</legend><br/>
 
 				<label for="nombre">Nombre</label><br/>
 				<input tabindex="1" type="text" id="nombre" name="nombre"  maxlength="20" value=""/><br/>
